--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
@@ -13,20 +13,17 @@ Workbench key bindings
 <BODY BGCOLOR="#ffffff">
 <h2>Workbench key bindings</h2>
 <p>The workbench defines many keyboard accelerators for invoking common actions
-with the keyboard.&nbsp; When your plug-in defines a new action using the <b>actionSets</b>
-or <b>editorActions</b> extension points, an <b>accelerator</b> 
-attribute can be specified with any action.&nbsp; This is one way to establish
-the key combination that will invoke the action.&nbsp; However, allowing each
-plug-in to define their own accelerator keys for actions introduces several
-problems:</p>
+with the keyboard.&nbsp; In early versions of the platform, plug-ins could
+define the accelerator key to be used for their action when the action was
+defined.&nbsp; However, this strategy can cause several problems:</p>
 
 
 <ul>
-  <li>Different plug-ins may define the same accelerator for actions that are
+  <li>Different plug-ins may define the same accelerator key for actions that are
     not related.</li>
-  <li>Plug-ins may define different accelerators for actions that are
+  <li>Plug-ins may define different accelerator keys for actions that are
     semantically the same.</li>
-  <li>Plug-ins may define accelerators that later conflict with the workbench
+  <li>Plug-ins may define accelerator keys that later conflict with the workbench
     (as the workbench is upgraded).</li>
 </ul>
 
@@ -37,25 +34,27 @@ listed above and introduces new capabilities:</p>
 
 
 <ul>
-  <li>The user can control which registered sets of key bindings should be used.</li>
+  <li>The user can control which key bindings should be used.</li>
   <li>Plug-ins can define key bindings that emulate other tools that may be
     familiar to users of the plug-in.</li>
+  <li>Plug-ins can define scopes for key bindings so that they are only active
+    in certain situations.</li>
 </ul>
-<p>The basic strategy is that plug-ins use <b>action definitions</b> to define
-semantic actions.&nbsp; Action definitions are simply declarations of an
-action.&nbsp; They do not define an implementation for the action.&nbsp; When a
+<p>The basic strategy is that plug-ins use <b>commands</b> to define
+semantic actions.&nbsp; Commands are simply declarations of an action and its
+associated category, key binding, and scope.&nbsp; Commands do not define an implementation for the action.&nbsp; When a
 plug-in defines an action for an editor, action set, or view, the action can
-specify that it is an implementation of one of these action definitions.&nbsp;
-This allows semantically similar actions to be associated with the same action
-definition.</p>
-<p>Meanwhile, plug-ins can define <b>accelerator sets</b> that map action
-definitions to key combinations.&nbsp; These accelerator sets can be grouped
-into <b>accelerator configurations</b> that the user may activate via the
-Preferences dialog. </p>
-<p>Finally, plug-ins can define <b>accelerator scopes</b> which determine the
-lookup order for key bindings.</p>
+specify that it is an implementation of one of these commands.&nbsp;
+This allows semantically similar actions to be associated with the same command.</p>
+<p>Once a command is defined, a <b>key binding</b> may be defined that
+references the command.&nbsp; The key binding defines the key sequence that
+should be used to invoke the command.&nbsp; A key binding may reference a <b>key
+configuration</b> which is used to group key bindings into different named
+configurations that the user may activate via the
+Preferences dialog.&nbsp; The key binding can also assign a <b>scope</b> which determines the
+lookup order for key binding resolution.</p>
 <p>This is all best understood by walking through the workbench and looking at
-how actions and accelerators are declared.&nbsp; We'll look at all of this from
+how commands and key bindings are declared.&nbsp; We'll look at all of this from
 the point of view of defining key bindings for existing actions.&nbsp; </p>
 
 
