--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
@@ -5,41 +5,30 @@
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
-Accelerator sets
+Key bindings
 </TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Accelerator sets</h3>
+<h3>Key bindings</h3>
 
 
-<p>The association between an action definition and the key combinations that should
-invoke the action is called an <b>accelerator</b>.&nbsp; An <b>accelerator set</b>
-is a list of accelerators.&nbsp; Plug-ins can
-contribute accelerator sets using the <b><a href="../reference/extension-points/org_eclipse_ui_acceleratorSets.html">org.eclipse.ui.acceleratorSets</a></b>
-extension point.&nbsp; The workbench defines an accelerator set that provides
-emacs-like key bindings:&nbsp;</p>
+<p>The association between a command and the key combinations that should
+invoke the command is called a <b>key binding</b>.&nbsp; Plug-ins can define key
+bindings along with commands in the <b><a href="../reference/extension-points/org_eclipse_ui_commands.html">org.eclipse.ui.commands</a></b>
+extension point.&nbsp; The workbench defines key bindings after it defines the
+commands in the markup:</p>
 
 
-<pre><font color="#4444CC">&lt;extension
-      point=&quot;org.eclipse.ui.acceleratorSets&quot;&gt;
-   &lt;acceleratorSet
-         scopeId=&quot;org.eclipse.ui.globalScope&quot;
-         configurationId=&quot;org.eclipse.ui.emacsAcceleratorConfiguration&quot;&gt;
-      &lt;accelerator
-            key=&quot;Ctrl+F4||Ctrl+X Ctrl+K&quot;
-            id=&quot;org.eclipse.ui.file.close&quot;&gt;
-      &lt;/accelerator&gt;
-      &lt;accelerator
-            key=&quot;Ctrl+Shift+F4||Ctrl+X Ctrl+C&quot;
-            id=&quot;org.eclipse.ui.file.closeAll&quot;&gt;
-      &lt;/accelerator&gt;
-      <b>&lt;accelerator
-            key=&quot;Ctrl+X Ctrl+S&quot;
-            id=&quot;org.eclipse.ui.file.save&quot;&gt;
-      &lt;/accelerator&gt;</b>
-      ...</font></pre>
+<pre><font color="#4444CC">...
+&lt;keyBinding
+      <b>string=&quot;Ctrl+S&quot;</b>
+      scope=&quot;org.eclipse.ui.globalScope&quot;
+      <b>command=&quot;org.eclipse.ui.file.save&quot;</b>
+      configuration=&quot;org.eclipse.ui.defaultAcceleratorConfiguration&quot;&gt;
+&lt;/keyBinding&gt;
+...</font></pre>
 
 
 <p>There is our friend <b>org.eclipse.ui.file.save</b>.&nbsp; Recall our
@@ -60,18 +49,17 @@ hypothetical action definition:</p>
 		   ...
 	   &lt;/actionSet&gt;
 &lt;/extension&gt;</pre>
-</font><p>When our example action set is active, our save action will be invoked
-when the user chooses <b>Ctrl+X</b>  followed by <b>Ctrl+S</b>. (The use of ||,
-such as <b>&quot;Ctrl+Shift+F4||Ctrl+X Ctrl+C&quot; </b>indicates that either
-key combination can be used to activate the action.)</p>
+</font><p>The <b>string</b> attribute for a key binding defines the key
+combination that is used to invoke a command.&nbsp; So, it follows that when our example action set is active, our save action will be invoked
+when the user chooses <b>Ctrl+S</b>.</p>
 
 
 <p> Likewise, when the
-workbench <b>SaveAction</b> is active, the same key combinations will invoke it
-instead, since the workbench used the same action definition id for the <b>SaveAction</b>.</p>
+workbench <b>SaveAction</b> is active, the same key combination will invoke it
+instead, since the workbench uses the same command id for its <b>SaveAction</b>.</p>
 
 
-<p>To complete the example, we need to understand what the <b>scopeID</b> and <b>configurationId</b>
+<p>To complete the example, we need to understand what the <b>scope</b> and <b>configuration</b>
 are all about.&nbsp; Let's tackle configurations first.</p>
 
 
