--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_decorators.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_decorators.htm
@@ -38,27 +38,79 @@ extension point.</p>
 
 
 <pre><font color="#4444CC">&lt;extension
-   point=&quot;org.eclipse.ui.decorators&quot;&gt;
+         point=&quot;org.eclipse.ui.decorators&quot;&gt;
       &lt;decorator
-            objectClass=&quot;org.eclipse.core.resources.IResource&quot;
+            <b>lightweight=&quot;true&quot;
+</b>            <b>quadrant=&quot;TOP_LEFT&quot;</b>
             adaptable=&quot;true&quot;
             label=&quot;%decorator.label&quot;
+            <b>icon=&quot;icons/full/ovr16/binary_co.gif&quot;</b>
             state=&quot;false&quot;
-            <b>class</b>=&quot;org.eclipse.pde.internal.ui.wizards.imports.BinaryProjectDecorator&quot;
             id=&quot;org.eclipse.pde.ui.binaryProjectDecorator&quot;&gt;
          &lt;description&gt;
             %decorator.desc
          &lt;/description&gt;
+         &lt;enablement&gt;
+            ...
+         &lt;/enablement&gt;
       &lt;/decorator&gt;
-&lt;/extension&gt;</font></pre>
+ &lt;/extension&gt;</font></pre>
 
 
-<p>The <b>class </b>attribute should name a class that implements <a href="../reference/api/org/eclipse/jface/viewers/ILabelDecorator.html"><b>ILabelDecorator</b></a>.&nbsp;
+<p>There are several different ways to supply a decorator implementation.&nbsp;
+This markup uses the simplest way, known as a <b>declarative</b> <b>lightweight</b>
+decorator.&nbsp; When a declarative lightweight decorator is defined, the markup
+contains a complete description of the decorator's icon, placement, and enabling
+conditions.&nbsp; Declarative decorators are useful when only an icon is used to
+decorate the label.&nbsp; The plug-in need only specify the <b>quadrant</b> where the decorator should be
+overlayed on the regular icon and the <b>icon</b> for the overlay.&nbsp; As
+shown in the picture, the PDE binary icon is overlayed in the top left quadrant of the
+package icon.</p>
+
+
+<p>If your plug-in needs to manipulate the label text in addition to the icon,
+or if the type of icon is determined dynamically, you can use a non-declarative <b>lightweight</b>
+ decorator.&nbsp; In this case, an implementation <b>class</b> that implements <a href="../reference/api/org/eclipse/jface/viewers/ILightweightLabelDecorator.html"><b>ILightweightLabelDecorator</b></a>
+must be defined.&nbsp; The designated class is responsible for supplying a prefix,
+suffix, and overlay image at runtime which are applied to the label.&nbsp; The mechanics of
+concatenating the prefix and suffix with the label text and performing the overlay
+are handled by the workbench code.&nbsp; The following markup shows how the CVS
+client defines its decorator using this technique:</p>
+
+
+<pre><font color="#4444CC">&lt;extension
+         point=&quot;org.eclipse.ui.decorators&quot;&gt;
+    &lt;decorator
+            objectClass=&quot;org.eclipse.core.resources.IResource&quot;
+            adaptable=&quot;true&quot;
+            label=&quot;%DecoratorStandard.name&quot;
+            state=&quot;false&quot;
+            <b>lightweight= &quot;true&quot;</b>
+            <b>quadrant = &quot;BOTTOM_RIGHT&quot;</b>
+            <b>class=&quot;org.eclipse.team.internal.ccvs.ui.CVSLightweightDecorator&quot;</b>
+            id=&quot;org.eclipse.team.cvs.ui.decorator&quot;&gt;
+         &lt;description&gt;
+            %DecoratorStandard.desc
+         &lt;/description&gt;
+    &lt;/decorator&gt;
+&lt;/extension&gt;</pre></font>
+
+
+<p>Finally, your plug-in can choose to do all of the image and label management
+itself.&nbsp; In this case, the <b>lightweight</b> attribute should be set to
+false and the <b>class </b>attribute should name a class that implements <a href="../reference/api/org/eclipse/jface/viewers/ILabelDecorator.html"><b>ILabelDecorator</b></a>.&nbsp;
 This class allows you to decorate the original label's image and text with your
-own annotations.&nbsp; The <b>label</b> and <b>description</b> attributes
+own annotations.&nbsp;&nbsp;It gives you increased flexibility since you aren't
+limited to prefixes, suffixes, and simple quadrant overlays.</p>
+
+
+<p>Other attributes of a decorator are independent of the particular
+implementation style.&nbsp; The <b>label</b> and <b>description</b> attributes
 designate the text that is used to name and describe the decorator in the
 preferences dialog.&nbsp; The <b>objectClass</b> names the class of objects to
-which the decorator should be applied.&nbsp; The <b>adaptable</b> flag indicates
+which the decorator should be applied.&nbsp; The <b>enablement</b> attribute
+allows you to describe the conditions under which the object should be
+decorated.&nbsp;&nbsp; The <b>adaptable</b> flag indicates
 whether objects that adapt to the class should also be decorated.&nbsp; The <b>
 state</b> flag controls whether the decorator is visible by default.</p>
 
@@ -67,7 +119,10 @@ state</b> flag controls whether the decorator is visible by default.</p>
 Decorations</b> preferences page.&nbsp;
 Individual decorators can be turned on and off.&nbsp; Even so, it is a good idea
 to design your decorators so that they do not overlap or conflict with existing
-platform SDK decorators.&nbsp; If your decorators include information that is
+platform SDK decorators.&nbsp;&nbsp;</p>
+
+
+<p> If your decorators include information that is
 expensive to compute or potentially distracting, you may want to contribute your
 own preferences that allow the user to further fine-tune the decorator once it
 is on.&nbsp; This technique is used by the CVS client.</p>
