--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
@@ -13,12 +13,40 @@
 Implementing a Structure Viewer</H2>
 
 
-<p>The compare plug-in provides substantial support for implementing your own
-content viewer:</p>
+<p>
+	A structure merge viewer performs a two-way or three-way compare of its inputs, presents the result
+	in a hierarchical view, and lets the user merge between the inputs.&nbsp;
+    Structure merge viewers are common for workspace resources or the members of
+	an archive file.</p>
 
 
-<h3>
-Differencer&nbsp;</h3>
+<h3>Tree-like structure viewers</h3>
+
+
+<p>Because the implementation of many structure compare viewers is based
+on a tree, the compare plug-in provides a generic tree-based
+<a href="../reference/api/org/eclipse/compare/structuremergeviewer/StructureDiffViewer.html"><b>StructureDiffViewer</b></a>.&nbsp;
+Your plug-in is responsible for supplying a <b>structure creator</b>  that breaks a single input object into a hierarchical structure.&nbsp;
+The <a href="../reference/api/org/eclipse/compare/structuremergeviewer/StructureDiffViewer.html"><b>StructureDiffViewer</b></a>
+performs the compare on the resulting structure and displays the result as a tree.</p>
+
+
+<p>You designate a structure creator for your plug-in using the <a href="../reference/extension-points/org_eclipse_compare_structureCreators.html"><b>org.eclipse.compare.structureCreators</b></a>
+extension.</p>
+
+
+<h3>Other hierarchical structure viewers</h3>
+
+
+<p>In some cases, the tree-based <a href="../reference/api/org/eclipse/compare/structuremergeviewer/StructureDiffViewer.html"><b>StructureDiffViewer</b></a>
+may not be appropriate for your plug-in.&nbsp; The <a href="../reference/extension-points/org_eclipse_compare_structureMergeViewers.html"><b>org.eclipse.compare.structureMergeViewers</b></a>
+ extension point allows you to define your own implementation for a structure
+merge viewer.&nbsp; Utility classes are provided to help you implement the
+viewer.</p>
+
+
+<h4>
+Differencer&nbsp;</h4>
 
 
 <p>
@@ -65,9 +93,9 @@ objects.&nbsp; A
 describes the changes among two or three inputs.&nbsp; The type of result nodes
 can be changed by overriding
 a single method of the engine.
-<h3>
+<h4>
 
-Difference Viewers</h3>
+Difference Viewers</h4>
 <p>
 
 A tree of
@@ -92,15 +120,15 @@ map the input data into a tree of objects implementing both the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
 and
 <a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
-interfaces,</li>
+ interfaces</li>
 
 <li>
 perform the compare operation by means of the
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a>, and</li>
+<a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a></li>
 
 <li>
 feed the differencing result into the
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffTreeViewer.html"><b>DiffTreeViewer</b></a>.</li>
+<a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffTreeViewer.html"><b>DiffTreeViewer</b></a></li>
 
 </ol>
 
@@ -112,12 +140,12 @@ that automates the three steps from above. It takes a single input object
 of type
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/ICompareInput.html"><b>ICompareInput</b></a>
 from which it retrieves the two or three
-input elements to compare. It uses an
+input elements to compare.&nbsp; It uses an
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureCreator.html"><b>IStructureCreator</b></a>
 to extract a tree containing <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
 and
 <a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
- objects from them. These trees are then compared with the differencing engine and
+ objects from them.&nbsp; These trees are then compared with the differencing engine and
 the result is displayed in the tree viewer.
 <p>
 
