*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/search_page.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/search_page.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Implementing a search page</TITLE>
+<TITLE>Contributing a search page</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>
-Implementing a search page</H2>
+Contributing a search page</H2>
 
 
 <p>When the user selects a resource and chooses the search command, the search
@@ -42,8 +42,22 @@ separated list of file extensions.&nbsp; Each file extension should be followed
 by a numeric weight value, where 0 is the lowest weight, separated by a
 colon.&nbsp; The weight value is a relative value used to allow the search
 infrastructure to find the search page most appropriate for a given resource.<p>If
-a search page can search all possible resources then &quot;*&quot; can be used.
-
+a search page can search all possible resources then &quot;*&quot; should be used.<h3>Implementing
+the search page</h3>
+<p>The
+protocol for <a href="../reference/api/org/eclipse/search/ui/ISearchPage.html"><b>ISearchPage</b></a>
+is simple.&nbsp; Your search page must implement <code>performAction()</code> which
+is called when the <b>Search</b> button is pressed.&nbsp; Of course, your
+particular search implementation depends on your plug-in's function, but it is
+typical to open a results viewer in this method using
+the <a href="../reference/api/org/eclipse/search/ui/SearchUI.html"><b>SearchUI</b></a><b>
+</b>method <code>activateSearchResultView().</code>
+<p>Your plug-in is responsible for
+showing its results in the search result view.&nbsp; Matches are added to the
+view using <a href="../reference/api/org/eclipse/search/ui/ISearchResultView.html"><b>ISearchResultView</b></a>
+protocol.&nbsp; For each search match, a description of the match and a marker
+in the resource is specified.&nbsp; See <a href="resAdv_markers.htm">Resource
+markers</a> for information about markers and how they work.
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
 </BODY>
 </HTML>
