added linked resource concept page

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
@@ -36,28 +36,35 @@ Workbench:</p>
     examined during builds, closing a project can improve build time.</dd><dd>When a project is open, the structure of the project can be changed and
     you will see the contents.&nbsp;</dd>
 </dl>
+<p>
+Folders and files directly below projects can be linked to locations in the file system
+outside of the project's location.  These special folders and files are called 
+<a href="concepts-13.htm">linked resources</a>.
+</p>
 <p>Different tools that plug into the Workbench use their own specialized types
 of projects, folders, and files.&nbsp;</p>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-2.htm"><br>
-Workbench</a><a href="cnav.htm"><br>
-Navigator view<br>
-</a><a href="concepts-17.htm">Resource hierarchies</a><a href="concepts-22.htm"><br>
-Builds</a></p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="concepts-2.htm">Workbench</a><br>
+<a href="cnav.htm">Navigator view</a><br>
+<a href="concepts-17.htm">Resource hierarchies</a><br>
+<a href="concepts-13.htm">Linked resources</a><br>
+<a href="concepts-22.htm">Builds</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<a href="../tasks/tasks-53.htm"><br>Importing resources into the Workbench</a>
-<a href="../tasks/tasks-42.htm"><br>Creating a project</a>
-<a href="../tasks/tasks-43.htm"><br>Creating a folder</a>
-<a href="../tasks/tasks-44.htm"><br>Creating a file</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="../tasks/tasks-53.htm">Importing resources into the Workbench</a><br>
+<a href="../tasks/tasks-42.htm">Creating a project</a><br>
+<a href="../tasks/tasks-43.htm">Creating a folder</a><br>
+<a href="../tasks/tasks-44.htm">Creating a file</a><br>
 <a href="../tasks/tasks-45.htm">Creating linked resources</a><br>
-<a href="../tasks/tasks-47.htm">Closing projects</a>
-<a href="../tasks/tasks-49.htm"><br>Viewing resource properties</a>
-<a href="../tasks/tasks-46ag.htm"><br>Finding a resource quickly</a>
-<a href="../tasks/tasks-63cg.htm"><br>Copying resources</a><br>
+<a href="../tasks/tasks-47.htm">Closing projects</a><br>
+<a href="../tasks/tasks-49.htm">Viewing resource properties</a><br>
+<a href="../tasks/tasks-46ag.htm">Finding a resource quickly</a><br>
+<a href="../tasks/tasks-63cg.htm">Copying resources</a><br>
 <a href="../tasks/tasks-63.htm">Moving resources</a><br>
-<a href="../tasks/tasks-68.htm">Comparing resources</a>
+<a href="../tasks/tasks-68.htm">Comparing resources</a><br>
 </p>
 
 <p>&nbsp;<br>
