*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/samples/samples.html
+++ b/bundles/org.eclipse.platform.doc.isv/samples/samples.html
@@ -11,7 +11,7 @@
 <b>Examples - Installation</b></h1>
 
 <h3>
-1.0 Installation via the Update Manager</h3>
+ Installation via the Update Manager</h3>
 
 <p>
 The Eclipse SDK examples are found on the Eclipse project update site at <a href="http://update.eclipse.org/updates">http://update.eclipse.org/updates</a>.
@@ -40,7 +40,7 @@ To locate and install them into a product:</p>
 </ol>
 
 <h3>
-1.1 Manual Installation</h3>
+ Manual Installation</h3>
 To install the examples without the Update Manager, download the appropriate Eclipse SDK Example zip file from the
 Eclipse project web site at <a href="http://www.eclipse.org/downloads">http://www.eclipse.org/downloads</a>.
 <p>
